cambio de index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <div id="header">
  
  <ul class="nav">
-     <li><a href="genericaPrincipal.html">Inicio</a>
+     <li><a href="index.html">Inicio</a>
      <li><a href="steam.html">STEAM</a></li>
     
      <li><a href="">Proyectos 𝅏</a>
