--- a/principal.html
+++ b/principal.html
@@ -13,7 +13,7 @@
  <div id="header">
  
  <ul class="nav">
-     <li><a href="genericaPrincipal.html">Inicio</a>
+     <li><a href="index.html">Inicio</a>
      <li><a href="herramientas.html">Herramientas Utilizadas</a></li>
      <li><a href="nuestroP.html">Nuestro Proyecto</a></li>
      <li><a href="">Nosotros 𝅏</a>
