--- a/steam.html
+++ b/steam.html
@@ -12,7 +12,7 @@
     <div id="header">
  
         <ul class="nav">
-            <li><a href="genericaPrincipal.html">Inicio</a>
+            <li><a href="index.html">Inicio</a>
             <li><a href="herramientas.html">STEAM</a></li>
            
             <li><a href="">Proyectos 𝅏</a>
