--- a/steam.html
+++ b/steam.html
@@ -43,7 +43,7 @@
 
 <div id="Proyecto">
     
-    <h1>Proyectos STEM</h1>
+    <h1>Proyectos STEAM</h1>
     <div id="aline">
     <p align="justify">Los Proyectos Integradores de Aprendizajes con enfoque STEM permiten el trabajo 
         interdisciplinario y permiten la concreción de los aprendizajes esperados en las distintas 
