--- a/steam.html
+++ b/steam.html
@@ -45,7 +45,7 @@
     
     <h1>Proyectos STEAM</h1>
     <div id="aline">
-    <p align="justify">Los Proyectos Integradores de Aprendizajes con enfoque STEM permiten el trabajo 
+    <p align="justify">Los Proyectos Integradores de Aprendizajes con enfoque STEAM permiten el trabajo 
         interdisciplinario y permiten la concreción de los aprendizajes esperados en las distintas 
         disciplinas, en torno a temas relevantes y significativos, tanto para los docentes y 
         estudiantes como para la comunidad, además amplía la visión multicultural del mundo.<br><br>
